# telemetryflow-python-sdk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
configs/: otel-collector-minimal.yaml  otel-collector.yaml  prometheus.yaml  sdk-default.yaml  sdk-minimal.yaml  sdk-v2-only.yaml  tfo-collector-unified.yaml  tfo-collector.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD-SYSTEM.md  GENERATOR.md  QUICKSTART.md  README.md  TESTING.md
docs/githooks/: commit-msg  pre-commit  pre-push
examples/basic/: main.py
examples/grpc_server/: main.py
examples/http_server/: main.py
examples/worker/: main.py
scripts/: install-hooks.sh
src/telemetryflow/: __init__.py  banner.py  builder.py  client.py  version.py
src/telemetryflow/application/: __init__.py  commands.py  queries.py
src/telemetryflow/cli/: __init__.py  generator.py  generator_restapi.py
src/telemetryflow/cli/templates/: __init__.py
src/telemetryflow/cli/templates/native/: README.md.tpl  __init__.py  env.tpl  example_basic.py.tpl  example_grpc_server.py.tpl  example_http_server.py.tpl  example_worker.py.tpl  init.py.tpl  logs.py.tpl  metrics.py.tpl  traces.py.tpl
src/telemetryflow/cli/templates/restapi/: __init__.py
src/telemetryflow/cli/templates/restapi/application/: __init__.py  base_command.py.tpl  base_dto.py.tpl  base_handler.py.tpl  base_query.py.tpl
src/telemetryflow/cli/templates/restapi/docs/: API.md.tpl  ARCHITECTURE.md.tpl  DEPLOYMENT.md.tpl  DEVELOPMENT.md.tpl  __init__.py
src/telemetryflow/cli/templates/restapi/domain/: __init__.py  base_entity.py.tpl  base_repository.py.tpl
src/telemetryflow/cli/templates/restapi/entity/: __init__.py  command_handler.py.tpl  commands.py.tpl  dto.py.tpl  entity.py.tpl  http_handler.py.tpl  migration_down.sql.tpl  migration_up.sql.tpl  persistence.py.tpl  queries.py.tpl  query_handler.py.tpl  repository.py.tpl
src/telemetryflow/cli/templates/restapi/infrastructure/: __init__.py  config.py.tpl  database.py.tpl  health_handler.py.tpl  middleware.py.tpl  response.py.tpl  routes.py.tpl  server.py.tpl
src/telemetryflow/cli/templates/restapi/project/: Dockerfile.tpl  Makefile.tpl  README.md.tpl  __init__.py  docker-compose.yml.tpl  env.example.tpl  gitignore.tpl  main.py.tpl  pyproject.toml.tpl  requirements.txt.tpl
src/telemetryflow/domain/: __init__.py  config.py  credentials.py
src/telemetryflow/infrastructure/: __init__.py  exporters.py  handlers.py
src/telemetryflow/instrumentation/: __init__.py  integration.py
src/telemetryflow/middleware/: __init__.py  base.py  fastapi.py  flask.py
tests/: __init__.py
tests/e2e/testdata/: nginx.conf  otel-collector.yaml
tests/e2e/testdata/mock-responses/: health
tests/integration/: __init__.py  test_client_integration.py
tests/unit/: __init__.py  test_init.py
tests/unit/application/: test_commands.py  test_queries.py
tests/unit/cli/: __init__.py  test_generator.py  test_generator_restapi.py
tests/unit/domain/: test_config.py  test_credentials.py
tests/unit/infrastructure/: __init__.py  test_exporters.py  test_handlers.py
tests/unit/instrumentation/: __init__.py  test_instrumentation.py  test_integration.py
tests/unit/middleware/: __init__.py  test_base.py  test_fastapi.py  test_flask.py  test_init.py
tests/unit/presentation/: test_banner.py  test_builder.py  test_client.py  test_version.py
